Minor fixes when using key authentication. Must escape characters in the JSON.

--- a/Assets/StreamingAssets/Config/config.json
+++ b/Assets/StreamingAssets/Config/config.json
@@ -1,12 +1,12 @@
 {
   "vncConnectionInfo": {
-    "targetHost": "178.62.101.170",
+    "targetHost": "127.0.0.1,
     "vncServerPassword": "",
     "port": 5900
   },
   "sshConnectionInfo": {
-    "username": "tfg",
-    "password": "123456",
+    "username": "",
+    "password": "",
     "port": 22,
     "publicKeyAuth": {
       "path": "",
