--- a/Assets/StreamingAssets/Config/config.json
+++ b/Assets/StreamingAssets/Config/config.json
@@ -1,13 +1,13 @@
 {
   "_comment": "Route to the ssh key file must be escaped if using Windows path syntax",
   "vncConnectionInfo": {
-    "targetHost": "178.62.101.170",
+    "targetHost": "127.0.0.1",
     "vncServerPassword": "",
     "port": 5900
   },
   "sshConnectionInfo": {
-    "username": "tfg",
-    "password": "123456",
+    "username": "example",
+    "password": "",
     "port": 22,
     "publicKeyAuth": {
       "path": "",
